--- a/_config.yml
+++ b/_config.yml
@@ -81,11 +81,11 @@ analytics:
 # Site Author
 author:
   name             : "N.I Bountos"
-  avatar           : "profile.png"
+  avatar           : "images/profile.png"
   bio              : "Artificial intelligence researcher with a focus on applications with high social impact."
   location         : "Greece"
   employer         : "Institute for Astronomy, Astrophysics, Space Applications and Remote Sensing, National Observatory of Athens"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=XFUe1WQAAAAJ&hl=el&oi=ao"
   email            :  "mpountos@outlook.com.gr"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
