--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Artificial intelligence researcher with a focus on applications with high social impact."
   location         : "Greece"
-  employer         : "Institute for Astronomy, Astrophysics, Space Applications and Remote Sensing, National Observatory of Athens"
+  employer         : "National Observatory of Athens"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=XFUe1WQAAAAJ&hl=el&oi=ao"
   email            :  "mpountos@outlook.com.gr"
