--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "N.I Bountos"
   avatar           : "profile.png"
-  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the [Orion Lab](http://orionlab.space.noa.gr)"
+  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the "<a href="http://orionlab.space.noa.gr">Orion Lab</a>
   location         : "Greece"
   employer         : "National Observatory of Athens"
   pubmed           : 
