--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,9 @@ analytics:
 author:
   name             : "N.I Bountos"
   avatar           : "profile.png"
-  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the "<a href="http://orionlab.space.noa.gr">Orion Lab</a>
+  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the Orion Lab"
   location         : "Greece"
+  employer         : <a href="http://orionlab.space.noa.gr">Orion Lab</a> 
   employer         : "National Observatory of Athens"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=XFUe1WQAAAAJ&hl=el&oi=ao"
