--- a/_config.yml
+++ b/_config.yml
@@ -82,10 +82,9 @@ analytics:
 author:
   name             : "N.I Bountos"
   avatar           : "profile.png"
-  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the Orion Lab"
+  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the Orion Lab of the National Observatory of Athens."
   location         : "Greece"
-  employer         : <a href="http://orionlab.space.noa.gr">Orion Lab</a> 
-  employer         : "National Observatory of Athens"
+  employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=XFUe1WQAAAAJ&hl=el&oi=ao"
   email            :  "mpountos@outlook.com.gr"
