--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "N.I Bountos"
   avatar           : "profile.png"
-  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the Orion Lab at the Institute for Astronomy Astrophysics Space Applications & Remote Sensing of the National Observatory of Athens."
+  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the Orion Lab of the Institute for Astronomy, Astrophysics, Space Applications, and Remote Sensing of the National Observatory of Athens."
   location         : "Greece"
   employer         : 
   pubmed           : 
