--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=XFUe1WQAAAAJ&hl=el&oi=ao"
-  email            :  "mpountos@outlook.com.gr"
+  email            :  "bountos@noa.gr"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : #"replacethistwitterhandle"
+  twitter          : "NikosGiannisB"
   vine             :
   weibo            :
   xing             :
