--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "N.I Bountos"
   avatar           : "profile.png"
-  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the Orion Lab of the Institute for Astronomy, Astrophysics, Space Applications, and Remote Sensing of the National Observatory of Athens and a research intern at Mila - Quebec AI Institute."
+  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Currently a member of the Orion Lab of the Institute for Astronomy, Astrophysics, Space Applications, and Remote Sensing of the National Observatory of Athens/Technical University of Athens and a research intern at Mila - Quebec AI Institute."
   location         : #"Greece"
   employer         : 
   pubmed           : 
