--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "N.I Bountos"
   avatar           : "profile.png"
-  bio              : "Artificial intelligence researcher with a focus on applications with high social impact. Member of the Orion Lab of the Institute for Astronomy, Astrophysics, Space Applications, and Remote Sensing of the National Observatory of Athens/Technical University of Athens."
+  bio              : "Artificial intelligence researcher with a focus on Deep Learning for Earth Observation. Member of the Orion Lab of the National Observatory of Athens and National Technical University of Athens."
   location         : #"Greece"
   employer         : 
   pubmed           : 
